test/oscar/compiler/errors/funcAlreadyDeclared.oscar
def add5(x: int) => int = {
  return (x + 5);
}

def add5(x: int) => int = {
  return (x + 5);
}

def main() => unit = {
  add5(1) 
}